--- a/src/main/resources/org/killbill/billing/plugin/notification/translations/Translation_en_US.properties
+++ b/src/main/resources/org/killbill/billing/plugin/notification/translations/Translation_en_US.properties
@@ -1,6 +1,17 @@
+merchantName=MERCHANT_NAME
+merchantContactEmail=MERCHANT_EMAIL
+merchantContactPhone=(888) 555-1234
+
+paymentLink=http://paymentLink
+subscriptionLink=http://subscriptionLink
+
+upcomingInvoiceSubject=You Have a New Invoice
 successfulPaymentSubject=Payment Confirmation
-successfulPaymentConfirmation=This email confirms your recent payment
-successfulPaymentDetail=Here are the details of your payment
+failedPaymentSubject=Failed Payment
+subscriptionCancellationRequestedSubject=Subscription Canceled
+subscriptionCancellationEffectiveSubject=Subscription Ended
+paymentRefundSubject=Refund Receipt
+
 invoiceNumber=Invoice #
 paymentDate=Payment Date
 invoiceAmountPaid=Paid
