--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,7 @@
+0.2.1
+    Fix for https://github.com/killbill/killbill-email-notifications-plugin/issues/3
+    Workaround for https://github.com/killbill/killbill-email-notifications-plugin/issues/4
+
 0.2.0
     Initial release for Kill Bill 0.16.x
 
