Issue #7: invoice not found msg; Readme updt; Missed subject; log debug

--- a/src/main/resources/org/killbill/billing/plugin/notification/translations/Translation_en_US.properties
+++ b/src/main/resources/org/killbill/billing/plugin/notification/translations/Translation_en_US.properties
@@ -11,6 +11,7 @@ failedPaymentSubject=Failed Payment
 subscriptionCancellationRequestedSubject=Subscription Canceled
 subscriptionCancellationEffectiveSubject=Subscription Ended
 paymentRefundSubject=Refund Receipt
+invoiceCreationSubject=You Have a New Invoice
 
 invoiceNumber=Invoice #
 paymentDate=Payment Date
