--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,7 @@
+0.5.1
+    Make sure email's subject and body are UTF-8
+    Do not hardcode merchant name in email subject
+
 0.5.0
     Initial release for Kill Bill 0.20.x
 
