--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,7 @@
+0.7.0
+    Support for custom formatters
+    Update to killbill-oss-parent 0.144.48
+
 0.6.1
     Support for HTML emails
     Fix NPE when handling external charges
