Fixed email templates, fixed upcoming invoice email error

--- a/src/main/resources/org/killbill/billing/plugin/notification/translations/Translation_en.properties
+++ b/src/main/resources/org/killbill/billing/plugin/notification/translations/Translation_en.properties
@@ -17,24 +17,36 @@
 # under the License.
 #
 
-merchantName=MERCHANT_NAME
-merchantContactEmail=MERCHANT_EMAIL
-merchantContactPhone=(888) 555-1234
-
-paymentLink=http://paymentLink
-subscriptionLink=http://subscriptionLink
-
-upcomingInvoiceSubject=You Have a New Invoice
-successfulPaymentSubject=Payment Confirmation
-failedPaymentSubject=Failed Payment
-subscriptionCancellationRequestedSubject=Subscription Canceled
-subscriptionCancellationEffectiveSubject=Subscription Ended
-paymentRefundSubject=Refund Receipt
-invoiceCreationSubject=You Have a New Invoice
-
-invoiceNumber=Invoice #
-paymentDate=Payment Date
-invoiceAmountPaid=Paid
-invoiceAmountTotal=Total
-billedTo=Billed To:
-
+upcomingInvoiceAdditionalMessage=Here's a preview of your upcoming invoice
+upcomingInvoiceSubject=Your upcoming invoice
+invoiceCreationAdditionalMessage=Thank you for your prompt payment!
+invoiceCreationSubject=Your recent invoice
+successfulPaymentAdditionalMessage=Thank you for your recent payment!
+successfulPaymentSubject=Your recent payment
+failedPaymentAdditionalMessage=We were not able to process your payment!
+failedPaymentSubject=Your recent payment
+paymentRefundAdditionalMessage=Your refund has been processed!
+paymentRefundSubject=Your recent payment
+companyName=Acme Corporation
+companyAddress=57 Academy Drive
+companyCityProvincePostalCode=Oak Creek, WI 53154
+companyCountry=US
+invoicePrefix=INV# 
+invoiceTitle=Invoice
+invoiceDate=Invoice Date: 
+invoiceAmount=Total: 
+invoiceAmountPaid=Amount Paid: 
+invoiceBalance=Balance: 
+invoiceItemServicePeriod=Service Period
+invoiceItemDescription=Plan
+invoiceItemAmount=Amount
+paymentTitle=Payment
+paymentDate=Payment Date: 
+paymentAmount=Total: 
+subscriptionCancellationRequestedAdditionalMessage=The following subscription will be cancelled
+subscriptionCancellationRequestedSubject=Your subscription will be cancelled
+subscriptionCancellationEffectiveAdditionalMessage=The following subscription has been cancelled
+subscriptionCancellationEffectiveSubject=Your subscription has been cancelled
+subscriptionTitle=Subscription
+subscriptionEndDate=End Date: 
+susbscriptionPlan=Plan: 
