--- a/src/main/resources/org/killbill/billing/plugin/notification/translations/Translation_en.properties
+++ b/src/main/resources/org/killbill/billing/plugin/notification/translations/Translation_en.properties
@@ -26,7 +26,7 @@ successfulPaymentSubject=Your recent payment
 failedPaymentAdditionalMessage=We were not able to process your payment!
 failedPaymentSubject=Your recent payment
 paymentRefundAdditionalMessage=Your refund has been processed!
-paymentRefundSubject=Your recent payment
+paymentRefundSubject=Refund Receipt
 companyName=Acme Corporation
 companyAddress=57 Academy Drive
 companyCityProvincePostalCode=Oak Creek, WI 53154
